# axum_service_starter

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: pull-request-validation.yml
compose/: compose.yaml
compose/jaegar/: compose.yaml
compose/open-observe/: README.md  compose.yaml
src/: lib.rs  main.rs
src/config/: app_config.rs
src/middleware/: server.rs
src/models/: error.rs
src/routes/: health.rs  mod.rs
src/utils/: telemetry.rs
tests/api/: helpers.rs
