[package]
name = "axum_service_starter"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "axum_service_starter"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
axum = { version = "0.8.4", features = ["multipart"] }
tower = { version = "0.5.2", features = [] }
tower-http = { version = "0.6.6", features = [
    "trace",
    "timeout",
    "cors",
    "normalize-path",
    "limit",
] }
http = "1.3.1"
hyper = "1.6.0"
tonic = { version = "0.13.1", features = ["tls-native-roots"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
anyhow = "1.0.98"
thiserror = "2.0.12"

# OpenTelemetry
opentelemetry = { version = "0.30.0", features = ["logs", "metrics", "trace", "internal-logs"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "logs", "metrics", "trace", "spec_unstable_metrics_views"] }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic","tls-roots"] }
opentelemetry-appender-tracing = { version = "0.30.1", features = ["experimental_use_tracing_span_context"] }
tower-otel-http-metrics = { version = "0.16.0", default-features = false, features = ["axum"] }

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-opentelemetry = { version = "0.31.0", features = ["metrics"] }

# OpenAPI Documentation
utoipa-axum = "0.2.0"
utoipa = "5.4.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml", "filters"] }
tempfile = "3.20.0"

[profile.dev.package]
# Insta: Faster runs https://insta.rs/docs/quickstart/#optional-faster-runs
insta.opt-level = 3

[profile.release]
opt-level = "z"   # Optimize for size.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"
